# meeting-agent

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: setup-audio-macos.sh  setup-audio-sink.sh
src/: __init__.py  cli.py  config.py  errors.py  orchestrator.py
src/audio/: capture.py  transcriber.py
src/meeting/: connector.py  display.py  parser.py
src/notes/: formatter.py  summarizer.py
tests/: test_capture.py  test_cli.py  test_config.py  test_connector.py  test_formatter.py  test_orchestrator.py  test_parser.py  test_summarizer.py  test_transcriber.py
