[project]
name = "meeting-agent"
version = "0.1.0"
description = "AI agent for joining meetings and taking notes"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dateutil>=2.8",
    "httpx>=0.25",
    "rich>=13.0",
    "openai>=1.0.0",
    "click>=8.0",
    "playwright-stealth>=2.0.3",
]

[project.optional-dependencies]
# Linux headless: Xvfb virtual display (also requires system package: xvfb)
#   sudo apt-get install xvfb
#   pip install 'meeting-agent[linux]'
linux = [
    "pyvirtualdisplay>=3.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "coverage>=7.0",
]

[project.scripts]
meeting-agent = "src.cli:cli"

[tool.uv]
constraint-dependencies = [
    "onnxruntime<1.21; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
